--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
       </div>
     </div>
 
+    <script src="dist/bundle.js"></script>
     <script src="scripts/less/dist/less.min.js" ></script>
     <script src="scripts/axios/dist/axios.min.js"></script>
     <script src="js/app.js"></script>
