new loader and first test

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div class="page">
+      <div id="loader">
+        <h1>Carregando</h1>
+      </div>
       <div class="card">
         <div class="container left">
           <h6 class="title">Simule sua Antecipação</h6>
