--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,17 @@
             <input-sale-value id="form-sale-value">
               <label for="form-sale-value">Informe o valor da venda *</label>
               <input name="form-sale-value" type="tel">
-              <p class="warning warning-sale-value"></p>
+              <p class="warning" id="warning-sale-value"></p>
             </input-sale-value>
             <input-installments id="form-installments">
               <label for="form-installments">Em quantas parcelas *</label>
               <input name="form-installments" type="tel">
-              <p class="warning warning-installments"></p>
+              <p class="warning" id="warning-installments"></p>
             </input-installments>
             <input-mdr id="form-mdr">
               <label for="form-mdr">Informe o percentual de MDR *</label>
               <input name="form-mdr" type="tel">
-              <p class="warning warning-mdr"></p>
+              <p class="warning" id="warning-mdr"></p>
             </input-mdr>
           </form>
         </div>
