--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,12 @@
         <p>Clique na tela para continuar.</p>
       </offline-overlay>
 
+      <offline-overlay id="error">
+        <h1 class="error">Ocorreu um erro com a request.</h1>
+        <h3>Tente novamente mais tarde.</h3>
+        <p>Clique na tela para continuar.</p>
+      </offline-overlay>
+
       <div class="card">
         <div class="container left">
           <h6 class="title">Simule sua Antecipação</h6>
@@ -64,6 +70,7 @@
     <script src="scripts/less/dist/less.min.js" ></script>
     <script src="scripts/axios/dist/axios.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/components/errorOverlay.js"></script>
     <script src="js/components/offlineOverlay.js"></script>
     <script src="js/components/inputSaleValue.js"></script>
     <script src="js/components/inputInstallments.js"></script>
