new errors overlays for status 408 and 500

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,18 @@
         <p>Clique na tela para continuar.</p>
       </offline-overlay>
 
+      <offline-overlay id="error-408">
+        <h1 class="error">Erro 408: Request Timeout.</h1>
+        <h3>Tente novamente mais tarde.</h3>
+        <p>Clique na tela para continuar.</p>
+      </offline-overlay>
+
+      <offline-overlay id="error-500">
+        <h1 class="error">Erro 500: Internal Server Error.</h1>
+        <h3>Tente novamente mais tarde.</h3>
+        <p>Clique na tela para continuar.</p>
+      </offline-overlay>
+
       <div class="card">
         <div class="container left">
           <h6 class="title">Simule sua Antecipação</h6>
